added empty hugo folders with a .gitkeep file innit, try 02

--- a/config.toml
+++ b/config.toml
@@ -39,7 +39,7 @@ ignoreFiles = ["\\.Rmd$",
   archive = "archives"
 
 [author]
-  name = "Emil Bellamy Begtrup-Bright TEST01"
+  name = "Emil Bellamy Begtrup-Bright TEST02 7 maj"
   bio = "Sociologist and data scientist"
   job = "Scientific assistant"
   location = "Denmark"
